--- a/prank.html
+++ b/prank.html
@@ -56,8 +56,8 @@
 <body>
     <h1>You've Been Pranked!</h1>
     <p>Surprise! This is just a joke 😜</p>
-    <video controls width="600">
-        <source src="aprilfool.mp4" type="video/mp4">
+    <video autoplay muted playsinline width="600">
+        <source src="prank-video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </body>
