--- a/prank.html
+++ b/prank.html
@@ -56,7 +56,7 @@
 <body>
     <h1>You've Been Pranked!</h1>
     <p>Surprise! This is just a joke 😜</p>
-    <video autoplay muted playsinline width="600">
+    <video autoplay loop playsinline width="600">
         <source src="aprilfool.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
