--- a/prank.html
+++ b/prank.html
@@ -56,9 +56,17 @@
 <body>
     <h1>You've Been Pranked!</h1>
     <p>Surprise! This is just a joke 😜</p>
-    <video autoplay loop playsinline width="600">
-        <source src="aprilfool.mp4" type="video/mp4">
+    <video id="prank-video" autoplay loop playsinline width="600">
+        <source src="prank-video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
+    <script>
+        document.getElementById('prank-video').addEventListener('error', function(event) {
+            console.error('Video failed to load:', event);
+        });
+        document.getElementById('prank-video').addEventListener('canplay', function() {
+            console.log('Video is ready to play');
+        });
+    </script>
 </body>
 </html>
