--- a/prank.html
+++ b/prank.html
@@ -17,16 +17,21 @@
             justify-content: center;
             height: 100vh;
             overflow: hidden;
+            text-align: center;
         }
         h1 {
             font-size: 3em;
-            text-align: center;
             animation: shake 0.5s infinite;
         }
         p {
             font-size: 1.5em;
-            text-align: center;
             animation: fadeIn 2s ease-in-out infinite alternate;
+        }
+        video {
+            margin-top: 20px;
+            border: 5px solid white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
         @keyframes shake {
             0% { transform: translate(1px, 1px) rotate(0deg); }
@@ -45,18 +50,35 @@
             0% { opacity: 0; }
             100% { opacity: 1; }
         }
-        video {
-            margin-top: 20px;
-            border: 5px solid white;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        /* Responsive styles */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2em;
+            }
+            p {
+                font-size: 1.2em;
+            }
+            video {
+                width: 90%;
+            }
+        }
+        @media (min-width: 601px) {
+            h1 {
+                font-size: 3em;
+            }
+            p {
+                font-size: 1.5em;
+            }
+            video {
+                width: 600px;
+            }
         }
     </style>
 </head>
 <body>
     <h1>You've Been Pranked!</h1>
     <p>Surprise! This is just a joke 😜</p>
-    <video id="prank-video" autoplay loop playsinline width="600">
+    <video id="prank-video" autoplay loop playsinline controls>
         <source src="prank-video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
