--- a/index.html
+++ b/index.html
@@ -11,33 +11,61 @@
             margin: 0;
             padding: 0;
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
+            background: linear-gradient(135deg, #f4f4f4, #d9e2e6);
         }
         form {
             background-color: white;
             padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 90%;
+            max-width: 400px;
+            box-sizing: border-box;
+        }
+        h2 {
+            margin: 0 0 20px 0;
+            font-size: 1.5em;
+            color: #333;
+            text-align: center;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+            color: #555;
         }
         input[type="email"], input[type="text"], input[type="submit"] {
-            display: block;
             width: 100%;
-            margin-bottom: 10px;
-            padding: 10px;
+            margin-bottom: 15px;
+            padding: 12px;
             border: 1px solid #ccc;
-            border-radius: 3px;
+            border-radius: 5px;
+            box-sizing: border-box;
         }
         input[type="submit"] {
             background-color: #4CAF50;
             color: white;
             border: none;
             cursor: pointer;
+            font-size: 1.1em;
+            transition: background-color 0.3s ease;
         }
         input[type="submit"]:hover {
             background-color: #45a049;
+        }
+        @media (max-width: 600px) {
+            form {
+                padding: 15px;
+            }
+            input[type="email"], input[type="text"], input[type="submit"] {
+                padding: 10px;
+            }
+            h2 {
+                font-size: 1.3em;
+            }
         }
     </style>
 </head>
