--- a/prank.html
+++ b/prank.html
@@ -45,21 +45,44 @@
             0% { opacity: 0; }
             100% { opacity: 1; }
         }
-        video {
+        .video-container {
+            position: relative;
+            width: 90%;
+            max-width: 800px; /* Set a maximum width for larger screens */
+            padding-top: 56.25%; /* 16:9 aspect ratio */
             margin-top: 20px;
             border: 5px solid white;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        }
+        .video-container video {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+            object-fit: cover; /* Cover the container, maintaining aspect ratio */
+        }
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2em;
+            }
+            p {
+                font-size: 1.2em;
+            }
         }
     </style>
 </head>
 <body>
     <h1>You've Been Pranked!</h1>
     <p>Surprise! This is just a joke 😜</p>
-    <video id="prank-video" autoplay loop playsinline width="600">
-        <source src="aprilfool.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <div class="video-container">
+        <video id="prank-video" autoplay loop playsinline>
+            <source src="aprilfool.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
     <script>
         document.getElementById('prank-video').addEventListener('error', function(event) {
             console.error('Video failed to load:', event);
