--- a/prank.html
+++ b/prank.html
@@ -51,7 +51,7 @@
             max-width: 800px; /* Set a maximum width for larger screens */
             padding-top: 56.25%; /* 16:9 aspect ratio */
             margin-top: 20px;
-            border: 5px solid white;
+            border: 5px solid black;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
