--- a/index.html
+++ b/index.html
@@ -78,17 +78,27 @@
     <h1>You've Been Pranked!</h1>
     <p>Surprise! This is just a joke 😜</p>
     <div class="video-container">
-        <video id="prank-video" autoplay loop playsinline>
+        <video id="prank-video" autoplay loop playsinline muted>
             <source src="aprilfool.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+        <button id="unmute-button" style="position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); padding: 10px 20px; font-size: 1em;">Unmute</button>
     </div>
     <script>
-        document.getElementById('prank-video').addEventListener('error', function(event) {
+        const video = document.getElementById('prank-video');
+        const unmuteButton = document.getElementById('unmute-button');
+
+        video.addEventListener('error', function(event) {
             console.error('Video failed to load:', event);
         });
-        document.getElementById('prank-video').addEventListener('canplay', function() {
+
+        video.addEventListener('canplay', function() {
             console.log('Video is ready to play');
+        });
+
+        unmuteButton.addEventListener('click', function() {
+            video.muted = false;
+            unmuteButton.style.display = 'none';
         });
     </script>
 </body>
