--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
     <h1>You've Been Pranked!</h1>
     <p>Surprise! This is just a joke 😜</p>
     <div class="video-container">
-        <video id="prank-video" autoplay loop playsinline muted>
+        <video id="prank-video" autoplay loop playsinline>
             <source src="aprilfool.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <button id="unmute-button" style="position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); padding: 10px 20px; font-size: 1em;">Unmute</button>
     </div>
     <script>
         const video = document.getElementById('prank-video');
