--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             width: 100%;
             max-width: 400px;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
         .login-container h2 {
             margin-bottom: 20px;
@@ -57,6 +60,22 @@
             outline: none;
             box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
             border-color: #007BFF;
+        }
+        @media (max-width: 600px) {
+            .login-container {
+                padding: 20px;
+            }
+            .login-container h2 {
+                font-size: 1.5em;
+                margin-bottom: 15px;
+            }
+            .login-container input {
+                font-size: 14px;
+            }
+            .login-container button {
+                font-size: 14px;
+                padding: 8px 16px;
+            }
         }
     </style>
 </head>
